# aiolocust

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  index.html  locustfile.py  mkdocs.yml  objects.inv  pyproject.toml  test.py
.github/workflows/: docs.yml  tests.yml
api/: index.html
docs/: api.md  index.md
examples/: advanced.py  advanced_user_class_settings.py  mitmproxy_addon.py  stages.py  testdata_from_mongodb.py
examples/otel/: instrument_aiohttpclient.py  instrument_aiohttpclient_span_manipulation.py
examples/playwright/: locustfile.py
search/: search_index.json
src/aiolocust/: __init__.py  __main__.py  cli.py  datatypes.py  event_handlers.py  http.py  main.py  otel.py  pw.py  runner.py  stats.py
src/aiolocust/users/: http.py
tests/: conftest.py  test_aiolocust.py  test_cli.py  test_http.py  test_httpuser.py  test_locustclientsession.py  test_main.py  test_pw.py  test_runner.py  test_stats.py  test_user.py  utils.py
tests/performance/: index.html  nginx.conf
