[project]
name = "aiolocust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Holmberg", email = "lars.holmberg@redshirt.se" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100
# lint.ignore = ["E402", "E501", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I001", "ARG001"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
