[project]
name = "aiolocust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Holmberg", email = "lars.holmberg@redshirt.se" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "rich>=14.2.0",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "uvloop>=0.22.1 ; sys_platform == 'darwin'",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 110
# lint.ignore = ["E402", "E501", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I", "ARG001"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|resp)$"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "ruff>=0.14.10",
]

