[project]
name = "aiolocust"
version = "0.1.0" # updated from github action on tags
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lars Holmberg", email = "lars.holmberg@redshirt.se" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "rich>=14.2.0",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "uvloop>=0.22.1 ; sys_platform == 'darwin'",
    "typer>=0.21.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-aiohttp-client>=0.60b1",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120
lint.ignore = ["E501", "E402", "E713", "E731"]
lint.select = ["E", "F", "W", "UP", "I", "ARG001"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|resp)$"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[project.scripts]
aiolocust = "aiolocust.main:app"

[tool.pytest]
filterwarnings = ["ignore:Inheritance class LocustClientSession from ClientSession is discouraged:DeprecationWarning"]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "standard" # this is the default when running pyright on command line, but needed to help vscode
